test-suite/invalid/types/invalid-number.jyml
# Invalid: malformed number
"bad_number": 123.45.67